--- a/ChiSquareDist.ipynb
+++ b/ChiSquareDist.ipynb
@@ -4,13 +4,11 @@
    "source": [
     "# 卡方分布\n",
     "\n",
-    "随机变量X服从标准正态分布，$X～N(0,1)$ $E[X]=0$ $var(X)=1$ \n",
+    "卡方分布（chi-square distribution，或写作$\\chi^2$分布）是概率论与统计学中常用的一种概率分布。k个独立的标准正态分布变量的平方和服从自由度为k的卡方分布。卡方分布是一种特殊的伽玛分布，是统计推论中应用最为广泛的概率分布之一，例如假设检验和置信区间的计算。卡方分布是一种特殊的伽玛分布，是统计推论中应用最为广泛的概率分布之一，例如假设检验和置信区间的计算。\n",
     "\n",
-    "从这个正态分布中抽取样本\n",
+    "随机变量$X$服从标准正态分布，$X～N(0,1)$ $\\mu=0$ $\\sigma=1$ ,定义变量$Q$为随机变量$X$的平方和$$Q=\\displaystyle\\sum_{i=1}^kX_{i}^2$$\n",
     "\n",
-    "定义随机变量$Q_{1}=X^2$，则随机变量$Q_{1}$服从自由度为1的卡方分布，$Q_{1}～\\chi_{1}^2$，DF=1\n",
-    "\n",
-    "定义随机变量$Q_{2}=X_{1}^2+X_{2}^2$，则随机变量$Q_{2}$服从自由度为2的卡方分布，$Q_{2}～\\chi_{2}^2$，DF=2\n",
+    "$Q$服从自由度为$k$的卡方分布，计为：$Q～\\chi_{k}^2$\n",
     "\n"
    ],
    "cell_type": "markdown",
